2025-05-04T00:58:00Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14816179268 # 633
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-04
* notice: last 14d: unq all: 7 8
* notice: prev accum: outdated-unq outdated-all / unq all: 429 1436 / 435 1443
* notice: next accum: outdated-unq outdated-all / unq all: 429 1436 / 436 1444
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-05-03]

2025-05-03T00:51:18Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14805782246 # 632
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-03
* notice: last 14d: unq all: 6 7
* notice: prev accum: outdated-unq outdated-all / unq all: 428 1435 / 434 1442
* notice: next accum: outdated-unq outdated-all / unq all: 429 1436 / 435 1443
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-04-18] / [2025-05-02]

2025-05-02T00:52:41Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14786444341 # 631
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-02
* notice: last 14d: unq all: 6 7
* notice: prev accum: outdated-unq outdated-all / unq all: 427 1433 / 433 1441
* notice: next accum: outdated-unq outdated-all / unq all: 428 1435 / 434 1442
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-04-17] / [2025-05-01]

2025-05-01T00:57:55Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14767400384 # 630