@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-05-04T00:58:00Z",
-  "count_outdated" : 1436,
-  "uniques_outdated" : 429,
+  "timestamp" : "2025-05-06T00:53:13Z",
+  "count_outdated" : 1437,
+  "uniques_outdated" : 430,
   "count" : 1444,
   "uniques" : 436,
   "views" : [
-    {
-      "timestamp": "2025-04-21T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-04-24T00:00:00Z",
       "count": 1,
