@@ -1,12 +1,7 @@
 {
-  "count": 8,
-  "uniques": 7,
+  "count": 7,
+  "uniques": 6,
   "views": [
-    {
-      "timestamp": "2025-04-21T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-04-24T00:00:00Z",
       "count": 1,
